// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NeonPage - LiferayNotifications renders nothing if passed an empty array 1`] = `null`;

exports[`NeonPage - LiferayNotifications renders notifications with actions if onHideNotifications is present 1`] = `
<div
  ComponentPath="@material-ui/core/Snackbar"
  prop-ContentProps="{\\"aria-describedby\\":\\"neon-data-portal-notifications\\"}"
  prop-anchorOrigin="{\\"vertical\\":\\"bottom\\",\\"horizontal\\":\\"right\\"}"
  prop-open={true}
>
  <div
    className="MuiPaper-root MuiSnackbarContent-root makeStyles-notification-1 MuiPaper-elevation6"
    role="alert"
  >
    <div
      className="MuiSnackbarContent-message"
    >
      <div
        id="neon-data-portal-notifications"
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "bar",
            }
          }
        />
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<b>HTML</b>",
            }
          }
        />
      </div>
    </div>
    <div
      className="MuiSnackbarContent-action"
    >
      <button
        aria-label="close"
        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`NeonPage - LiferayNotifications renders notifications with no actions if onHideNotifications not present 1`] = `
<div
  ComponentPath="@material-ui/core/Snackbar"
  prop-ContentProps="{\\"aria-describedby\\":\\"neon-data-portal-notifications\\"}"
  prop-anchorOrigin="{\\"vertical\\":\\"bottom\\",\\"horizontal\\":\\"right\\"}"
  prop-open={true}
>
  <div
    className="MuiPaper-root MuiSnackbarContent-root makeStyles-notification-1 MuiPaper-elevation6"
    role="alert"
  >
    <div
      className="MuiSnackbarContent-message"
    >
      <div
        id="neon-data-portal-notifications"
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "bar",
            }
          }
        />
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<b>HTML</b>",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;
